--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -75,3 +75,7 @@ p {
     overflow-wrap: break-word;
     word-wrap: break-word;
 }
+
+.text-center {
+    text-align: center;
+}
